新增发送短信验证码，新增API允许跨域访问
